<resources>
    <string name="app_name">UTutor</string>

    <!-- Strings related to login -->
    <string name="prompt_email">E-mail</string>
    <string name="prompt_password">Пароль</string>
    <string name="action_sign_in">Логин</string>
    <string name="action_sign_up">Зарегистрироваться</string>

    <string name="action_go_sign_up">Нет аккаунта?</string>
    <string name="desc_logo">Logo</string>
    <string name="desc_arrow_right">Open</string>

    <string name="prompt_are_you_sure">Вы уверены закрыть чат</string>
    <string name="prompt_audio_message_warning">Если хотите использовать аудио сообщение вы должны разрешить доступ</string>


    <string name="topic">Тема:</string>
    <string name="drawer_item_logout">Выйти</string>
    <string name="drawer_item_settings">Настройки</string>
    <string name="drawer_item_payment">Оплата</string>
    <string name="drawer_item_home_work">Домашнее задание</string>
    <string name="drawer_item_main">Главная</string>
    <string name="drawer_item_help">Помощь</string>
    <string name="drawer_item_feedback">Оставить отзыв</string>
    <string name="choose_type">Выберите тип</string>

    <string name="loading">Загрузка…</string>
    <string name="action_next">Зарегистрироваться</string>
    <string name="prompt_phone">Номер телефона</string>
    <string name="prompt_verify">Код подверждения</string>
    <string name="prompt_set_password">Придумайте пароль</string>
    <string name="prompt_confirm_password">Потвердите пароль</string>
    <string name="action_get_code">Получить код</string>
    <string name="action_set_password">Готово</string>
    <string name="action_verify_code">Подвердить код</string>
    <string name="action_done">Готово</string>
    <string name="action_finish">Завершить</string>
    <string name="prompt_first_name">Имя</string>
    <string name="prompt_last_name">Фамилия</string>
    <string name="error_invalid_email">Email адрес неверный</string>
    <string name="error_invalid_username_or_password">Не правильно введен данные пользователя</string>
    <string name="error_invalid_password">Паспорт слишком короткий</string>
    <string name="error_field_required">Это поле не может быть пусто</string>
    <string name="error_invalid_verify_code">Неправильно код верификаций</string>
    <string name="error_phone_number">Неправильный номер телефона</string>
    <string name="error_password">Неправильный пароль</string>
    <string name="error_not_same_password">Пароли не соответствует</string>
    <string name="error_no_balance">У вас недостаточно средств</string>
    <string name="error_same_password">Одинаковый пароль</string>
    <string name="error_request_exists">Запрос был создан</string>
    <string name="error_cancelled">Отменен</string>
    <string name="error_teacher_sign_in">Приложение работает только для учеников</string>
    <string name="error_incorrect_time">Проверьте правильность часы вашем устройстве</string>
    <string name="prompt_retry">Повторить</string>
    <string name="duration_short">Длит:</string>
    <string name="tarif">тариф</string>
    <string name="price_ratio">₸/мин</string>

    <string name="all_lessons">Все предметы</string>
    <string name="main_topic_text">Ваши последние уроки</string>
    <string name="main_text_see_all">Показать все</string>
    <string name="search">Поиск</string>
    <string name="search_hint">Пойск по темам</string>
    <string name="ex_math">Математика</string>
    <string name="ex_name">Земский Андрей</string>
    <string name="ex_lesson_desc">We defined here a synchronous API that will receive the “after” and “limit” query string. The return type is “Call”, this Call class will allow us to execute the request and know if the request was successful or not, also to extract the response data with the given generic type, in this case, the new defined Kotlin class RedditNewsResponse.</string>
    <string name="ex_class">9 класс</string>
    <string name="ex_teacher_full_name">Валентина Петровна</string>
    <string name="ex_lessons">Алгебра, Геометрия, Физика</string>
    <string name="ex_rating">9.5</string>
    <string name="ex_name_teacher">Валентина</string>
    <string name="ex_language">Язык: Русский</string>
    <string name="language">Язык</string>
    <string name="choose_teacher">Выбрать</string>
    <string name="ex_topic_short">С понятием рациональных чисел вы уже наверняка знакомы. Аналогично рациональные функции – это функции,</string>
    <string name="teachers_found">Найдено: </string>


    //titles
    <string name="main_title">Главная</string>
    <string name="ex_time">9 д. 16 ч.</string>
    <string name="ex_clock_timer">00:00</string>
    <string name="wait">wait</string>
    <string name="sending">sending</string>
    <string name="waiting">Ожидание</string>
    <string name="declined">Отказал</string>
    <string name="action_ready">Готов</string>
    <string name="action_cancel">Отмена</string>
    <string name="action_eval">Оценить</string>
    <string name="action_hide">Скрыть</string>


    // for chat
    <string name="hint_enter_a_message">Введите сообщение</string>
    <string name="action_delete">Delete</string>
    <string name="action_copy">Copy</string>
    <string name="copied_message">Скопировано в буфер обмена</string>
    <string name="session_finished">Cеанс завершен</string>
    <string name="text_get_money">С вашего лицевого счета быль списано</string>
    <string name="ex_dollar">10.00$</string>
    <string name="loading_status">Загрузка...</string>
    <string name="ex_time_long">Длительность: 1ч 20 м</string>
    <string name="ex_time_wait_ready">30с</string>
    <string name="cost_lesson">Стоимость сеанса</string>
    <string name="open_chat">Открыть чат</string>
    <string name="durationLesson">Длительность урока</string>
    <string name="ex_duration_lesson">29 минут 34 секунды</string>
    <string name="ex_learner">Андрей Земский</string>
    <string name="ex_country">Русский</string>
    <string name="prof_my_cost_h">Мой счет:</string>
    <string name="prof_top_up_balance">Пополнить баланс</string>
    <string name="prof_rating_by_lessons">Рейтинг по предметам</string>
    <string name="class_name">класс</string>
    <string name="history">История</string>
    <string name="currency">тенге</string>
    <string name="recent">Недавнее</string>
    <string name="ex_class_name">10 класс</string>
    <string name="audio_sent">Аудиозапись загружается</string>

    //account
    <string name="change_fio">Изменить Ф.И.О</string>
    <string name="change_email">Изменить E-mail</string>
    <string name="change_password">Изменить пароль</string>
    <string name="change_language">Изменить язык</string>
    <string name="old_password">Старый пароль</string>
    <string name="new_password">Новый пароль</string>
    <string name="confirm_password">Подвердите пароль</string>
    <string name="valid_password_description">Пароль должен содержать цифры, буквы и состоять хотя бы из 8 символов</string>
    <string name="success_password">Пароли изменены</string>
    <string name="un_success_password">Пароли не был изменен</string>
    <string name="feedback_send">Отзыв отправлен</string>


    //audio
    <string name="label_slide_to_cancel">Проведите для отмены</string>


    <string-array name="view_types_dialog">
        <item name="image">Галерея</item>
        <!--<item name="voice">Voice message (custom)</item>-->
    </string-array>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="ex_his_math">Математика | Сегодня в 6:08 | 00:01</string>
    <string name="start_session">Начать сеанс?</string>
    <string name="close_chat_desc">Если вы передумали, подождите 30 с. и вас переправить на предыдущую страницу</string>
    <string name="action_start">Начать</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="action_send">Отправить</string>
    <string name="enter_feedback">Оставьте отзыв</string>
    <string name="choose_test">Пройти \n тест</string>
    <string name="choose_srez">Вопросы по тесту</string>
    <string name="choose_homework">Домашнее \n задание</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!--App Message-->
    <string name="api_retry_error">Повторите!</string>
    <string name="api_default_error">Ошибка сервера, сообщите нам!</string>
    <string name="some_error">Неизвестный ошибка вышла!</string>
    <string name="internet_connection_error">Проверте интернет соединение!</string>
    <string name="title_activity_navigation_drawer">NavigationDrawerActivity</string>

    <string name="action_settings">Settings</string>

</resources>
