<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_payment"
            android:icon="@drawable/ic_menu_payment"
            android:title="@string/drawer_item_payment" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_menu_settings"
            android:title="@string/drawer_item_settings" />
        <item
            android:id="@+id/nav_help"
            android:icon="@drawable/ic_menu_help"
            android:title="@string/drawer_item_help" />
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_menu_logout"
            android:title="@string/drawer_item_logout" />
    </group>
</menu>
