<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">


    <TextView
        style="@style/finish_dialog_buttons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/is_finish_session"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        style="@style/finish_dialog_buttons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_get_money"
        android:textSize="12sp" />

    <TextView
        style="@style/finish_dialog_buttons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ex_dollar"
        android:textColor="@color/colorYellow"
        android:textSize="22sp" />

    <TextView
        style="@style/finish_dialog_buttons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ex_time_long" />

    <Button
        android:id="@+id/button_finish"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorYellow"
        android:text="@string/action_finish"
        android:textColor="@color/colorWhite" />
</LinearLayout>