<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="com.support.robigroup.ututor.screen.login.LoginFragment">

    <ImageView
        android:id="@+id/reg_logo_image"
        android:layout_width="110dp"
        android:layout_height="140dp"
        android:contentDescription="@string/desc_logo"
        android:scaleType="centerInside"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo_blue"
        android:layout_marginBottom="32dp"
        app:layout_constraintBottom_toTopOf="@+id/login_form" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="8dp"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/reg_logo_image" />

    <LinearLayout
        android:id="@+id/login_form"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="15dp"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginEnd="16dp">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <AutoCompleteTextView
                android:id="@+id/emailContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_email"
                style="@style/email_field" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/passwordContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:hint="@string/prompt_password"
                style="@style/password_field" />

        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/email_sign_in_button"
            style="@style/reg_buttons"
            android:layout_marginTop="16dp"
            android:text="@string/action_sign_in"/>

        <TextView
            android:id="@+id/go_sign_up_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/action_go_sign_up"
            android:layout_margin="10dp"
            android:layout_gravity="center_horizontal"
            android:textColorLink="@color/colorBlack"/>
    </LinearLayout>

</android.support.constraint.ConstraintLayout>

