<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.support.robigroup.ututor.screen.teachers.LastTopicFragment">

    <TextView
        android:id="@+id/topic_desc_head"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="start|top"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/topic"
        android:textColor="@color/black"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="spread" />

    <TextView
        android:id="@+id/topic_desc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/ex_topic_short"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/topic_desc_head" />

    <TextView
        android:id="@+id/class_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/ex_class"
        android:textColor="@color/colorLightBlue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/topic_desc" />

    <TextView
        android:id="@+id/teacher_rating"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="0dp"
        android:text="@string/ex_rating"
        android:textColor="@color/colorLightBlue"
        app:layout_constraintBottom_toBottomOf="@+id/teacher_image"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/teacher_image"
        tools:layout_editor_absoluteY="16dp" />

    <android.support.v7.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:cardCornerRadius="5dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/class_text">

        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:contentDescription="@string/desc_logo"
            android:scaleType="centerCrop"
            app:srcCompat="@drawable/ex_image_teacher" />
    </android.support.v7.widget.CardView>

    <TextView
        android:id="@+id/teacher_lessons"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:lines="1"
        android:text="@string/ex_lessons"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.17"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintStart_toEndOf="@+id/cardView"
        app:layout_constraintTop_toBottomOf="@+id/teacher_name" />

    <TextView
        android:id="@+id/teacher_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="0dp"
        android:lines="1"
        android:text="@string/ex_teacher_full_name"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/teacher_image"
        app:layout_constraintHorizontal_bias="0.29"
        app:layout_constraintStart_toEndOf="@+id/cardView"
        app:layout_constraintTop_toTopOf="@+id/cardView" />

    <ImageView
        android:id="@+id/teacher_image"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:background="@color/colorLightBlue"
        app:layout_constraintBottom_toBottomOf="@+id/teacher_name"
        app:layout_constraintEnd_toStartOf="@+id/teacher_rating"
        app:layout_constraintTop_toTopOf="@+id/teacher_name"
        app:srcCompat="@android:drawable/btn_star"
        tools:layout_editor_absoluteY="15dp" />

    <Button
        android:id="@+id/button_open_chat"
        style="@style/reg_buttons"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:text="@string/open_chat"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <ImageView
        android:id="@+id/user_image"
        android:layout_width="@dimen/icon_time_height_width"
        android:layout_height="@dimen/icon_time_height_width"
        android:layout_marginBottom="16dp"
        android:layout_marginStart="8dp"
        app:srcCompat="@drawable/ic_time"
        app:layout_constraintBottom_toTopOf="@+id/button_open_chat"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="@dimen/icon_time_height_width"
        android:layout_height="@dimen/icon_time_height_width"
        android:layout_marginBottom="16dp"
        android:layout_marginStart="8dp"
        app:srcCompat="@drawable/ic_time"
        app:layout_constraintBottom_toTopOf="@+id/user_image"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/cost_lesson"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/ex_dollar"
        app:layout_constraintBottom_toBottomOf="@+id/user_image"
        app:layout_constraintStart_toEndOf="@+id/user_image" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/cost_lesson"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/cost_lesson"
        app:layout_constraintStart_toEndOf="@+id/user_image" />

    <TextView
        android:id="@+id/duration_lesson"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/ex_duration_lesson"
        app:layout_constraintBottom_toBottomOf="@+id/imageView2"
        app:layout_constraintStart_toEndOf="@+id/imageView2" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/durationLesson"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/duration_lesson"
        app:layout_constraintStart_toEndOf="@+id/imageView2" />

</android.support.constraint.ConstraintLayout>
